--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -13,7 +13,11 @@
       <h1>Git, version control system</h1>
     </header>
 
-    <main></main>
+    <main>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet delectus,
+      voluptates, a soluta rem vel aliquam ipsam enim nisi unde culpa labore
+      laboriosam earum ea quia quas possimus aperiam minima!
+    </main>
     <footer>Footer</footer>
   </body>
   <html></html>
